make sure quick-start fields don't overflow even in Safari@OSX. Sync index page contents and layout to ERDA with basic skin - should probably be done similarly for IDMC index page.
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@3241 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/skin/erda-basic/core.css
+++ b/mig/images/skin/erda-basic/core.css
@@ -33,6 +33,14 @@ body {
   background: url("/images/skin/erda-basic/pattern.png") repeat scroll left center transparent;
 }
 
+/* Fixed width layout in line with UCPH style guidelines */
+body.staticpage {
+  margin: 0 auto;
+  width: 984px;
+  border-right: 1px solid #CCC;
+  border-left: 1px solid #CCC;
+}
+
 a {
   color: #0b76AE;
 }
@@ -46,11 +54,65 @@ h1 {
   background: url("/images/skin/erda-basic/background.png") repeat scroll left center #eee;
 }
 
+h1.staticpage {
+  border: 0;
+  margin: 12px 0;
+  color: #000;
+  background: none;
+  font-size: 18px;
+  padding: 4px;
+}
 
+h2.staticpage {
+  padding: 10px 2px 2px 2px;
+  border-bottom: 0;
+}
+
+h3.staticpage {
+  padding: 3px;
+}
+
+h4.staticpage {
+  /*border: 1px solid #fff;*/
+  padding: 2px;
+}
+
+div.quickstartfields {
+  color: #000;
+}
+div.loginfield, div.signupfield {
+  display: inline-block;
+  border: 2px solid #147;
+  color: #fff;
+  background-color: #369;
+  margin: 0px 4px;
+  font-size: 12px;
+  width: 460px;
+  border-radius: 4px;
+}
+div.loginfield > h2, div.signupfield > h2 {
+  padding: 0px;
+}
+div.loginfield {
+    float: right;
+}
 
 table {
   background: #eef;
   color: #000;
+}
+
+#nomenu.staticpage {
+  margin: 0;
+}
+
+#content.staticpage {
+  border-radius: 0;
+}
+
+.contentblock.staticpage {
+  /* Make sure to have some gap between text and footer */
+  min-height: 600px;
 }
 
 
@@ -85,17 +147,54 @@ table {
 
 #toplogo {
   border: 0;
-  background: url("/images/skin/erda-basic/background.gif") repeat scroll left center #eee;
+  background: url("/images/skin/erda-basic/background.png") repeat scroll left center #eee;
   color: white;
+}
+#toplogo.staticpage {
+  height: 36px;
+  font-size: 28px;
+}
+#toplogoleft.staticpage {
+  display: none;
+}
+#toplogocenter {
+  height: 20px;
+  margin: 4px 0px;
+  float: left;
+}
+#toplogocenter.staticpage {
+  float: none;
+  margin: 0;
+}
+#toplogoright {
+  /* use right side logo, too */
+  display: block;
+}
+#toplogoright.staticpage {
+  display: none;
 }
 #logoimage {
   opacity: 1.0;
 }
 
-
+#bottomspace {
+  display: none;
+}
 #bottomlogo {
-  background: url("/images/skin/erda-basic/background.gif") repeat scroll left center #eee;
+  background: url("/images/skin/erda-basic/background.png") repeat scroll left center #eee;
   color: white;
+}
+#bottomlogo.staticpage {
+  background: url("/images/skin/erda-basic/background.png") repeat scroll left center #eee;
+  border: 0;
+  background: #eee;
+  padding: 10px 10px 2px 10px;
+  font-size: 10px;
+  font-weight: normal;
+  line-height: 1.35em;
+  color: #666;
+  
+  border-bottom: 1px solid #CCC;
 }
 #bottomlogoleft {
   background-color: white;
@@ -122,6 +221,7 @@ a:hover.settingsbutton {
   background-color: #eef;
   color: #147;
 }
+
 .activebutton {
   border: 2px solid #369;
   background-color: #acf;
